--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -680,8 +680,12 @@ en:
   discourse_welcome_topic:
     title: "Welcome to %{site_title}! :wave:"
     body: |
-      We are so glad you joined us. %{site_description}
-      
+      We are so glad you joined us.
+
+      > ## %{site_title}
+      >
+      > %{site_description}
+
       Here are some things you can do to get started:
 
       :speaking_head: **Introduce yourself** by adding your picture and information about yourself and your interests to [your profile](%{base_path}/my/preferences/account). What is one thing you’d like to be asked about?
